# enjo

./: .gitignore  README.md
.github/workflows/: release.yml
Formula/: enjo.rb
docs/: architecture.md  data-model.md  sync-protocol.md
packaging/: enjo.rb.tmpl
server/: go.mod
server/cmd/enjod/: main.go
tui/: Cargo.toml
tui/migrations/: 0001_init.sql
tui/src/: app.rs  config.rs  main.rs  model.rs  status.rs
tui/src/store/: mod.rs
tui/src/ui/: mod.rs
