[package]
name = "enjo"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
toml = "0.9"
anyhow = "1"
